fix overflow on about us page

--- a/stylesheets/components/_product-card.scss
+++ b/stylesheets/components/_product-card.scss
@@ -49,8 +49,3 @@ img {
     transform: scale(1.2);
   }
 }
-#more-info-btn {
-  background-color: $light-background-color;
-  padding: 0.5rem;
-  border-radius: 10px;
-}
